--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html> <!-- versão do html -->
-<html lang="pt-br"> <!-- tag html e lingua do site -->
+<!DOCTYPE html> 
+<html lang="pt-br"> 
 
 <head> <!-- configurações do site -->
     <meta charset="UTF-8"> <!-- padrão de caracteres do site -->
@@ -18,7 +18,7 @@
     <ul>
         <li class="item">
 
-            <video alt="video carro Y" src="./img/model-y.mp4" autoplay loop muted ></video>
+            <video alt="video carro Y" src="./img/model-y.mp4" autoplay loop muted></video>
 
             <div class="info-carro">
                 <h1>Model Y</h1> <!--TÍTULO-->
@@ -26,7 +26,7 @@
             </div>
 
             <div class="rodape">
-                <button class="comprar">Comprar Agora</button>
+                <button onclick="aparecerFormulario()" class="comprar">Comprar Agora</button>
                 <button class="teste-drive">Faça um Teste Drive</button>
                 <p class="texto-rodape">Não garantimos seu veículo imediatamente. Consultar estoque.*</p>
             </div>
@@ -45,7 +45,7 @@
             </div>
 
             <div class="rodape">
-                <button class="comprar">Comprar Agora</button>
+                <button onclick="aparecerFormulario()" class="comprar">Comprar Agora</button>
                 <button class="teste-drive">Faça um Teste Drive</button>
                 <p class="texto-rodape">Não garantimos seu veículo imediatamente. Consultar estoque.*</p>
             </div>
@@ -64,7 +64,7 @@
             </div>
 
             <div class="rodape">
-                <button class="comprar">Comprar Agora</button>
+                <button onclick="aparecerFormulario()" class="comprar">Comprar Agora</button>
                 <button class="teste-drive">Faça um Teste Drive</button>
                 <p class="texto-rodape">Não garantimos seu veículo imediatamente. Consultar estoque.*</p>
             </div>
@@ -73,6 +73,14 @@
 
     </ul>
 
+    <div class="formulario">
+        <button onclick="desaparecerFormulario()" class="botaoform">Fechar</button>
+        <script type="text/javascript" src="https://form.jotform.com/jsform/241976467825068">Limpar</script>
+        <button  type="reset">Zerar</button>
+    </div>
+
 </body>
+
+<script src="./scripts.js"></script>
 
 </html>
