alteração no tamanho do form

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 
     <div class="formulario">
         <button onclick="desaparecerFormulario()" class="botaoform">Fechar</button>
-        <script type="text/javascript" src="https://form.jotform.com/jsform/241976467825068">Limpar</script>
+
+        <script type="texto/javascript" src="https://form.jotform.com/jsform/241976467825068">Limpar</script>
         
     </div>
 
